apps/vllm/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vllm
  namespace: vllm
spec:
  endpointSelector:
    matchLabels:
      app: vllm
  ingress:
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "8000", protocol: TCP }]
    - fromEndpoints:
        - matchLabels:
            app: sera
            k8s:io.kubernetes.pod.namespace: sera
        - matchLabels:
            app: agentmemory-qwen
            k8s:io.kubernetes.pod.namespace: agentmemory
        - matchLabels:
            app: cloudflare
            k8s:io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports: [{ port: "8000", protocol: TCP }]
